<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"

    tools:context="com.example.who.calendanot.ui.CalendarActivity">

    <Button
        android:text="@string/button_delete_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_event_button"
        android:layout_alignParentRight="true"
        style="@android:style/Widget.Holo.Light.Button.Small" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="16"
        android:layout_toLeftOf="@id/delete_event_button"
        android:id="@+id/input_id_event_delete"
        android:hint="@string/hint_delete_event"
        style="@android:style/Widget.Material.EditText" />


    <TextView
        android:text="@string/your_events_list"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/delete_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginBottom="20dp"/>

    <ListView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/events"
            android:layout_below="@id/textView7"/>


</RelativeLayout>