<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.who.calendanot.ui.CalendarActivity">


    <Button
        android:id="@+id/reminderBefore"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/button_before_event" />

    <EditText
        android:id="@+id/input_minutes_before"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reminderAfterCam"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_enter_event_before"
        android:inputType="number" />

    <Button
        android:id="@+id/reminderAfterCam"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/reminderBefore"
        android:text="@string/button_after_event_cam" />

    <EditText
        android:id="@+id/input_minutes_after_camera"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/reminderBefore"
        android:hint="@string/hint_enter_event_after_cam"
        android:inputType="number" />

    <Button
        android:id="@+id/reminderAfterScan"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/reminderAfterCam"
        android:text="@string/hint_enter_event_after_scan" />

    <EditText
        android:id="@+id/input_minutes_after_scan"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/reminderAfterCam"
        android:hint="@string/hint_enter_event_after_cam"
        android:inputType="number" />
    <Button
        android:id="@+id/reminderAfterFillForm"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/reminderAfterScan"
        android:text="@string/hint_enter_event_after_fill_form" />

    <EditText
        android:id="@+id/input_minutes_after_FillForm"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/reminderAfterScan"
        android:hint="@string/hint_enter_event_after_cam"
        android:inputType="number" />

    <ListView
        android:id="@+id/reminders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/reminderAfterFillForm" />


</RelativeLayout>